--- a/webgoat.yaml
+++ b/webgoat.yaml
@@ -19,3 +19,16 @@ spec:
           name: webgoat
           ports: 
           - containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: webgoat-service
+  namespace: default
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+    targetPort: 8080
+  selector:
+    app: webgoat
