Adding Protect/Prod deployments for apps

--- a/apps/juiceshop.yaml
+++ b/apps/juiceshop.yaml
@@ -4,7 +4,7 @@ metadata:
   name: juice-shop
   namespace: default
   labels:
-    contrast: nodejs
+    contrast: nodejs-assess
 spec:
   selector:
     matchLabels:
