--- a/apps/juiceshop-prod.yaml
+++ b/apps/juiceshop-prod.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webgoat
+  name: juice-shop-prod
   namespace: default
   labels:
-    contrast: java-assess
+    contrast: nodejs-protect
 spec:
   selector:
     matchLabels:
-      app: webgoat
+      app: juice-shop-prod
   template:
     metadata:
       labels:
-        app: webgoat
+        app: juice-shop-prod
     spec:
       containers:
-        - image: webgoat/webgoat-7.1
-          name: webgoat
+        - image: bkimminich/juice-shop
+          name: juice-shop
           ports: 
-          - containerPort: 8080
+          - containerPort: 3000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: webgoat-service
+  name: juice-shop-service-prod
   namespace: default
 spec:
   type: LoadBalancer
   ports:
   - port: 80
-    targetPort: 8080
+    targetPort: 3000
   selector:
-    app: webgoat
+    app: juice-shop-prod
