--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ crash.log
 # version control.
 
 *.tfvars
+.terraform.locl.hcl
+
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
